# rust-event-analytics

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.analytics-api  Dockerfile.e2e-tests  Dockerfile.ingestion-api  Dockerfile.perf-tests  Dockerfile.worker  Makefile  README.md  docker-compose-e2e.yml  docker-compose-perf.yml  docker-compose.yml  init.sql  prometheus.yml
crates/analytics-api/: Cargo.toml
crates/analytics-api/src/: main.rs
crates/e2e-tests/: Cargo.toml
crates/e2e-tests/src/: main.rs
crates/ingestion-api/: Cargo.toml
crates/ingestion-api/examples/: random_view_event.rs
crates/ingestion-api/src/: main.rs
crates/perf-tests/: Cargo.toml
crates/perf-tests/src/: main.rs
crates/shared/: Cargo.toml  build.rs
crates/shared/proto/: click.proto  purchase.proto  view.proto
crates/shared/src/: lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: main.rs
grafana/provisioning/dashboards/: dashboard.yml  overview.json
grafana/provisioning/datasources/: prometheus.yml
