[package]
name = "ingestion-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.13.0"
actix-web-validator = "5"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
shared = { version = "0.1.0", path = "../shared" }
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
