[package]
name = "ingestion-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.13.0"
actix-web-prom = "0.9"
actix-web-validator = "5"
chrono = { version = "0.4", features = ["serde"] }
prost = "0.13"
prost-types = "0.13"
rskafka = "0.5"
serde = { version = "1.0.228", features = ["derive"] }
shared = { version = "0.1.0", path = "../shared" }
tokio = { version = "1.49.0", features = ["full"] }
utoipa = { version = "5", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
uuid = { version = "1", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }