[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
clickhouse = { version = "0.13", features = ["uuid"] }
futures = "0.3"
prost = "0.13"
rskafka = "0.5"
serde = { version = "1", features = ["derive"] }
shared = { version = "0.1.0", path = "../shared" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde"] }